made the remove-button next to students align with it's student. fixed responsive design of same thing.

--- a/less/course-page.less
+++ b/less/course-page.less
@@ -1,59 +1,70 @@
 .icon-box-course {
-  width: 50px;
-  height: 50px;
-  margin-top: 20px;
-  display: inline-block;
-  img {
-    margin: 0 auto;
-    max-height: 40px;
-    max-width: 40px;
-    display: block;
-    padding-top: 10px;
-  }
+	width: 50px;
+	height: 50px;
+	margin-top: 20px;
+	display: inline-block;
+
+	img {
+		margin: 0 auto;
+		max-height: 40px;
+		max-width: 40px;
+		display: block;
+		padding-top: 10px;
+	}
 }
 
 .page-header-course {
-    font-weight: 300;
-    display: inline-block;
-    margin-left: 20px;
-    span {
-      font-size: 14px;
-      color: @custom-color-grey-light;
-    }
+	font-weight: 300;
+	display: inline-block;
+	margin-left: 20px;
+
+	span {
+		font-size: 14px;
+		color: @custom-color-grey-light;
+	}
 }
 
 .about-course {
-  background-color: @custom-color-beige;
-  padding: 2px 20px 20px 20px;
-  margin-top: 20px;
-  h4 {
-    text-transform: uppercase;
-    font-size: 14px;
-    color: @custom-color-black;
-  }
+	background-color: @custom-color-beige;
+	padding: 2px 20px 20px 20px;
+	margin-top: 20px;
+
+	h4 {
+		text-transform: uppercase;
+		font-size: 14px;
+		color: @custom-color-black;
+	}
 }
 
 .teacher-course {
-  background-color: #EEEEEE;
-  padding: 2px 20px 20px 20px;
-  margin-top: 20px;
-  h4 {
-    text-transform: uppercase;
-    font-size: 14px;
-    color: @custom-color-black;
-  }
+	background-color: #EEEEEE;
+	padding: 2px 20px 20px 20px;
+	margin-top: 20px;
+
+	h4 {
+		text-transform: uppercase;
+		font-size: 14px;
+		color: @custom-color-black;
+	}
 }
 
 .students-course {
-  padding: 2px 20px 20px 20px;  
-  margin-top: 20px;
-  h4 {
-    text-transform: uppercase;
-    font-size: 14px;
-    color: @custom-color-black;
-  }
-  button.remove-item {
-    margin-left: 15px;
-  }
+	padding: 2px 20px 20px 20px;
+	margin-top: 20px;
+
+	h4 {
+		text-transform: uppercase;
+		font-size: 14px;
+		color: @custom-color-black;
+	}
+
+	button.remove-item {
+		margin-left: 15px;
+	}
+
+	.flex-vert {
+		display: flex;
+		align-items: center;
+	}
 }
 
